--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API of Zips of USA",
   "main": "app.js",
   "scripts": {
-    "start" : "nodemon app",
+    "start": "nodemon app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/robsongomes/zips#readme",
   "dependencies": {
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "mongoose": "^4.4.5"
   }
 }
